--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,4 @@
-RewriteEngine On
-RewriteRule ^(.*)? route.php?route=$1 [L,QSA]
+ErrorDocument 404 /404.php
+
+# RewriteEngine On
+# RewriteRule ^(.*)? route.php?route=$1 [L,QSA]
